--- a/css/styles.css
+++ b/css/styles.css
@@ -6137,7 +6137,7 @@ button.bg-light:focus {
 }
 
 .bg-dark {
-  background-color: #343a40 !important;
+  background-color: #bd2130 !important;
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
