--- a/css/styles.css
+++ b/css/styles.css
@@ -6077,7 +6077,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #6c757d !important;
+  background-color: #00008b !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
