--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ body {
   line-height: 1.5;
   color: #bd2130;
   text-align: left;
-  background-color: #fff;
+  background-color: #36393e;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
