--- a/css/styles.css
+++ b/css/styles.css
@@ -67,8 +67,16 @@ body {
   color: #0f0049;
   text-align: left;
   background-color: #36393e;
-}
 
+}
+.logo {  /* logo on navbar */
+    display: inline-block;
+    vertical-align: top;
+    width: 50px;
+    height: 50px;
+    margin-right: 20px;
+    margin-top: 15px;
+  }
 [tabindex="-1"]:focus:not(:focus-visible) {
   outline: 0 !important;
 }
