--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #0f0049;
+  color: #f7f7f7;
   text-align: left;
   background-color: #36393e;
 
