--- a/css/styles.css
+++ b/css/styles.css
@@ -6085,7 +6085,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #00008b !important;
+  background-color: #010328 !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
@@ -6145,7 +6145,7 @@ button.bg-light:focus {
 }
 
 .bg-dark {
-  background-color: #03006d !important;
+  background-color: #010328 !important;
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
