--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,11 @@
  * Copyright 2011-2019 The Bootstrap Authors
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
+ */ 
+
+ /* 
+ NavBar = #010328
+Background = #36393e */
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -204,7 +208,7 @@ img {
     display: inline-block;
     vertical-align: top;
     width: 100px;
-    height: 50px;
+    height: 80px;
     margin-right: 20px;
     margin-top: 15px;
   }
