--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,15 @@ body {
   background-color: #36393e;
 
 }
+.nav-link_Home
+{
+  margin: 0;
+  font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 3rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #f7f7f7;
+}
 
 [tabindex="-1"]:focus:not(:focus-visible) {
   outline: 0 !important;
