--- a/css/styles.css
+++ b/css/styles.css
@@ -9840,7 +9840,9 @@ a.text-dark:hover, a.text-dark:focus {
 .text-muted {
   color: #6c757d !important;
 }
-
+.text-paragraph {
+  color: #000000;
+}
 .text-black-50 {
   color: rgba(0, 0, 0, 0.5) !important;
 }
