--- a/css/styles.css
+++ b/css/styles.css
@@ -227,6 +227,8 @@ img {
     width: 84px;
     height: 84px;
     margin-right: 20px;
+    margin-top: -10px;
+    margin-bottom: -10px;
   }
 svg {
   overflow: hidden;
