--- a/css/styles.css
+++ b/css/styles.css
@@ -9847,7 +9847,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-muted {
-  color: #6c757d !important;
+  color: #f7f7f7 !important;
 }
 .text-paragraph {
   color: #000000;
