Navbar and Logo addition

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,8 +7,8 @@ $white: #fff;
 $black: #000000;
 $darken: #232931;
 
-$primary: #fc5e28;
-$secondary: #040e26;
+$primary: #CE2027;
+$secondary: #212153;
 
 
 
