--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+ /* SEARCH TERMS
+  * orange nav = orange button of the navbar
+  * logo = css for logo on navbar
+ */
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -48,6 +52,12 @@ html {
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block; }
+
+/*logo*/
+.logo {
+  height: 45px;
+  width: auto;
+}
 
 body {
   margin: 0;
@@ -8361,10 +8371,10 @@ a, button {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #fc5e28; }
+  color: #CE2027; }
   a:hover, a:focus, button:hover, button:focus {
     text-decoration: none;
-    color: #fc5e28;
+    color: #CE2027;
     outline: none !important; }
 
 h1, h2, h3, h4, h5,
@@ -8374,7 +8384,7 @@ h1, h2, h3, h4, h5,
   font-weight: 400; }
 
 .text-primary {
-  color: #fc5e28 !important; }
+  color: #CE2027 !important; }
 
 .top {
   background: rgba(0, 0, 0, 0.05);
@@ -8382,7 +8392,7 @@ h1, h2, h3, h4, h5,
   color: #999999;
   z-index: 3; }
   .top span.fa {
-    color: #fc5e28; }
+    color: #CE2027; }
   @media (max-width: 767.98px) {
     .top .register-link {
       width: 100%;
@@ -8400,9 +8410,9 @@ h1, h2, h3, h4, h5,
     margin-right: 2px;
     border-radius: 50%; }
     .social-media p a span {
-      color: #fc5e28; }
+      color: #CE2027; }
     .social-media p a:hover span {
-      color: #fc5e28; }
+      color: #CE2027; }
 
 .topper {
   font-size: 15px;
@@ -8414,7 +8424,7 @@ h1, h2, h3, h4, h5,
     background: #fff;
     border: 1px solid rgba(0, 0, 0, 0.05); }
     .topper .icon span {
-      color: #fc5e28; }
+      color: #CE2027; }
   .topper .text {
     width: calc(100% - 50px); }
     .topper .text p {
@@ -8429,19 +8439,19 @@ h1, h2, h3, h4, h5,
         font-size: 13px;
         color: #000000; }
         .topper .text .con span:first-child {
-          color: #fc5e28; }
+          color: #CE2027; }
     .topper .text .hr span {
       color: #000000;
       font-weight: 600;
       font-size: 13px; }
     .topper .text .time span:last-child {
       font-weight: 600;
-      color: #fc5e28; }
+      color: #CE2027; }
 
 .ftco-navbar-light {
   background: transparent !important;
   position: absolute;
-  top: 160px;
+  top: auto;
   left: 0;
   right: 0;
   z-index: 3;
@@ -8472,10 +8482,11 @@ h1, h2, h3, h4, h5,
       padding-top: 20px;
       padding-bottom: 20px;
       margin-right: 0; } }
+/*orange nav */
   .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
-    font-size: 14px;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    font-size: 16px;
+    padding-top: 20px;
+    padding-bottom: 19px;
     padding-left: 25px;
     padding-right: 25px;
     color: #fff;
@@ -8508,21 +8519,21 @@ h1, h2, h3, h4, h5,
     border-radius: 0px; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
-        background: #fc5e28;
+        background: #CE2027;
         border-radius: 5px; } }
     .ftco-navbar-light .navbar-nav > .nav-item.cta > a:hover {
-      background: #fc5e28; }
+      background: #CE2027; }
   .ftco-navbar-light .navbar-nav > .nav-item .nav-link.active {
     background: transparent;
     background: none;
-    color: #fc5e28; }
+    color: #CE2027; }
     .ftco-navbar-light .navbar-nav > .nav-item .nav-link.active span:before {
       visibility: visible;
       -webkit-transform: scaleX(1);
       -ms-transform: scaleX(1);
       transform: scaleX(1); }
   .ftco-navbar-light .navbar-nav > .nav-item.active a {
-    background: #fc5e28;
+    background: #CE2027;
     color: #fff; }
   @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav > .nav-item.active > a {
@@ -8547,7 +8558,7 @@ h1, h2, h3, h4, h5,
     letter-spacing: .1em; }
     .ftco-navbar-light .navbar-toggler:hover, .ftco-navbar-light .navbar-toggler:focus {
       text-decoration: none;
-      color: #fc5e28;
+      color: #CE2027;
       outline: none !important; }
 
 .navbar-brand {
@@ -8566,12 +8577,12 @@ h1, h2, h3, h4, h5,
     .navbar-brand span small {
       display: block;
       font-size: 11px;
-      color: #fc5e28;
+      color: #CE2027;
       font-weight: 700; }
   .navbar-brand .flaticon {
     font-size: 50px;
     color: #fff;
-    background: #fc5e28;
+    background: #CE2027;
     padding: 4px; }
 
 .owl-carousel {
@@ -8646,7 +8657,7 @@ h1, h2, h3, h4, h5,
     font-size: 12px;
     text-transform: uppercase;
     letter-spacing: 2px;
-    color: #fc5e28;
+    color: #CE2027;
     display: inline-block;
     margin-bottom: 20px;
     font-weight: 600; }
@@ -8679,9 +8690,9 @@ h1, h2, h3, h4, h5,
       .slider-text .breadcrumbs span a {
         color: rgba(255, 255, 255, 0.8); }
         .slider-text .breadcrumbs span a:hover, .slider-text .breadcrumbs span a:focus {
-          color: #fc5e28; }
+          color: #CE2027; }
           .slider-text .breadcrumbs span a:hover i, .slider-text .breadcrumbs span a:focus i {
-            color: #fc5e28; }
+            color: #CE2027; }
   .slider-text .bread {
     font-weight: 700;
     color: #fff;
@@ -8691,7 +8702,7 @@ h1, h2, h3, h4, h5,
   background: #f8f9fa !important; }
 
 .bg-primary {
-  background: #fc5e28; }
+  background: #CE2027; }
 
 .bg-darken {
   background: #232931; }
@@ -8711,20 +8722,20 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #fc5e28;
-    border: 1px solid #fc5e28 !important;
+    background: #CE2027;
+    border: 1px solid #CE2027 !important;
     color: #fff !important; }
     .btn.btn-primary:hover {
-      border: 1px solid #fc5e28;
-      background: #fc5e28;
-      color: #fc5e28; }
+      border: 1px solid #CE2027;
+      background: #CE2027;
+      color: #CE2027; }
     .btn.btn-primary.btn-outline-primary {
-      border: 2px solid #fc5e28 !important;
+      border: 2px solid #CE2027 !important;
       background: transparent !important;
-      color: #fc5e28 !important; }
+      color: #CE2027 !important; }
       .btn.btn-primary.btn-outline-primary:hover {
         border: 2px solid transparent !important;
-        background: #fc5e28 !important;
+        background: #CE2027 !important;
         color: #fff !important; }
   .btn.btn-secondary {
     background: #040e26 !important;
@@ -8751,12 +8762,12 @@ h1, h2, h3, h4, h5,
       background: #fff !important;
       color: #fff; }
     .btn.btn-white.btn-outline-primary {
-      border: 1px solid #fc5e28;
+      border: 1px solid #CE2027;
       background: transparent;
-      color: #fc5e28; }
+      color: #CE2027; }
       .btn.btn-white.btn-outline-primary:hover {
         border: 1px solid transparent;
-        background: #fc5e28;
+        background: #CE2027;
         color: #fff; }
   .btn.btn-black {
     background: #000000 !important;
@@ -8767,12 +8778,12 @@ h1, h2, h3, h4, h5,
       background: #fff !important;
       color: #000000 !important; }
     .btn.btn-black.btn-outline-primary {
-      border: 1px solid #fc5e28;
+      border: 1px solid #CE2027;
       background: transparent;
-      color: #fc5e28; }
+      color: #CE2027; }
       .btn.btn-black.btn-outline-primary:hover {
         border: 1px solid transparent;
-        background: #fc5e28;
+        background: #CE2027;
         color: #fff; }
 
 .ftco-intro {
@@ -8803,7 +8814,7 @@ h1, h2, h3, h4, h5,
     font-weight: 700;
     text-transform: uppercase; }
     .ftco-intro h2 span {
-      background: #fc5e28; }
+      background: #CE2027; }
 
 .about-wrap {
   position: relative;
@@ -8814,7 +8825,7 @@ h1, h2, h3, h4, h5,
     right: 0;
     width: 90px;
     height: 120px;
-    background: #fc5e28;
+    background: #CE2027;
     margin-right: -45px;
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
@@ -8834,7 +8845,7 @@ h1, h2, h3, h4, h5,
     height: 0;
     border-style: solid;
     border-width: 120px 120px 0 0;
-    border-color: #fc5e28 transparent transparent transparent; }
+    border-color: #CE2027 transparent transparent transparent; }
   @media (max-width: 991.98px) {
     .about-wrap {
       height: 200px; }
@@ -8848,7 +8859,7 @@ h1, h2, h3, h4, h5,
     .about .icon span {
       font-size: 50px;
       line-height: 1.3;
-      color: #fc5e28; }
+      color: #CE2027; }
   .about h3 {
     font-size: 20px;
     font-weight: 500; }
@@ -8902,7 +8913,7 @@ h1, h2, h3, h4, h5,
       -moz-box-shadow: 0px 11px 32px -12px rgba(0, 0, 0, 0.28);
       box-shadow: 0px 11px 32px -12px rgba(0, 0, 0, 0.28); }
       .services-wrap .text .icon span {
-        color: #fc5e28;
+        color: #CE2027;
         font-size: 50px;
         -moz-transition: all 0.3s ease;
         -o-transition: all 0.3s ease;
@@ -8928,11 +8939,11 @@ h1, h2, h3, h4, h5,
     -moz-box-shadow: 0px 15px 46px -16px rgba(0, 0, 0, 0.18);
     box-shadow: 0px 15px 46px -16px rgba(0, 0, 0, 0.18); }
     .services-wrap:hover .text .icon {
-      background: #fc5e28; }
+      background: #CE2027; }
       .services-wrap:hover .text .icon span {
         color: white; }
     .services-wrap:hover .text .btn-custom {
-      background: #fc5e28; }
+      background: #CE2027; }
 
 .ftco-services-2 .services {
   -moz-transition: all 0.3s ease;
@@ -8964,7 +8975,7 @@ h1, h2, h3, h4, h5,
     -ms-transform: matrix(1.3, 0, -0.3, 1, 0, 0);
     transform: matrix(1.3, 0, -0.3, 1, 0, 0); }
   .ftco-services-2 .services.services-2 {
-    background: #fc5e28; }
+    background: #CE2027; }
     .ftco-services-2 .services.services-2 .icon {
       background: #040e26; }
   @media (min-width: 992px) {
@@ -8978,7 +8989,7 @@ h1, h2, h3, h4, h5,
     height: 80px;
     z-index: 1;
     margin-bottom: 20px;
-    background: #fc5e28;
+    background: #CE2027;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
@@ -9110,7 +9121,7 @@ textarea.form-control {
   visibility: hidden; }
 
 .bg-primary {
-  background: #fc5e28 !important; }
+  background: #CE2027 !important; }
 
 .bg-secondary {
   background: #040e26 !important; }
@@ -9140,7 +9151,7 @@ textarea.form-control {
     .project .img .icon {
       width: 70px;
       height: 70px;
-      background: #fc5e28;
+      background: #CE2027;
       margin: 0 auto;
       opacity: 0;
       -moz-transition: all 0.3s ease;
@@ -9168,7 +9179,7 @@ textarea.form-control {
     .project .text .subheading {
       background: rgba(0, 0, 0, 0.07);
       padding: 5px 10px;
-      color: #fc5e28;
+      color: #CE2027;
       font-size: 12px;
       display: inline-block;
       margin-bottom: 10px;
@@ -9181,9 +9192,9 @@ textarea.form-control {
       margin-bottom: 0;
       font-size: 13px; }
       .project .text p span.fa {
-        color: #fc5e28; }
+        color: #CE2027; }
   .project:hover .text {
-    background: #fc5e28; }
+    background: #CE2027; }
     .project:hover .text .subheading {
       color: #fff; }
     .project:hover .text h3 {
@@ -9233,7 +9244,7 @@ textarea.form-control {
           color: rgba(255, 255, 255, 0.7);
           font-size: 14px; }
         .ftco-footer .ftco-footer-widget ul li a:hover {
-          color: #fc5e28; }
+          color: #CE2027; }
   .ftco-footer p {
     color: rgba(255, 255, 255, 0.5); }
   .ftco-footer .ftco-heading-2 {
@@ -9244,7 +9255,7 @@ textarea.form-control {
     margin-bottom: 40px;
     letter-spacing: 2px; }
   .ftco-footer .logo a {
-    color: #fc5e28; }
+    color: #CE2027; }
     .ftco-footer .logo a span.flaticon {
       font-size: 24px;
       line-height: 1; }
@@ -9259,9 +9270,9 @@ textarea.form-control {
         color: #fff;
         text-decoration: underline; }
     .ftco-footer .bg-primary .aside-stretch {
-      background-color: #fc5e28; }
+      background-color: #CE2027; }
       .ftco-footer .bg-primary .aside-stretch:after {
-        background-color: #fc5e28; }
+        background-color: #CE2027; }
       .ftco-footer .bg-primary .aside-stretch:before {
         position: absolute;
         top: 0;
@@ -9269,7 +9280,7 @@ textarea.form-control {
         content: '';
         width: 100px;
         height: 100%;
-        background: #fc5e28;
+        background: #CE2027;
         -webkit-transform: matrix(1, 0, 0.9, 1, 150, 0);
         -ms-transform: matrix(1, 0, 0.9, 1, 150, 0);
         transform: matrix(1, 0, 0.9, 1, 150, 0);
@@ -9299,7 +9310,7 @@ textarea.form-control {
       transform: translate(-50%, -50%);
       color: #fff !important; }
     .ftco-footer-social li a:hover {
-      background: #fc5e28; }
+      background: #CE2027; }
 
 #map {
   height: 600px;
@@ -9335,7 +9346,7 @@ textarea.form-control {
   display: block;
   margin-bottom: 5px;
   text-transform: uppercase;
-  color: #fc5e28;
+  color: #CE2027;
   letter-spacing: 2px;
   font-weight: 600; }
 
@@ -9344,9 +9355,9 @@ textarea.form-control {
   font-size: 40px;
   font-weight: 700; }
   .heading-section h2 span {
-    color: #fc5e28; }
+    color: #CE2027; }
   .heading-section h2 span.number {
-    color: #fc5e28; }
+    color: #CE2027; }
   @media (max-width: 767.98px) {
     .heading-section h2 {
       font-size: 28px; } }
@@ -9355,7 +9366,7 @@ textarea.form-control {
   font-size: 16px; }
 
 .heading-section.heading-section-white .subheading {
-  color: #fc5e28; }
+  color: #CE2027; }
 
 .heading-section.heading-section-white h2 {
   color: #fff; }
@@ -9364,7 +9375,7 @@ textarea.form-control {
   color: rgba(255, 255, 255, 0.9); }
 
 .heading-section.heading-section-white h4 {
-  color: #fc5e28;
+  color: #CE2027;
   font-weight: 500; }
 
 .img,
@@ -9384,9 +9395,9 @@ textarea.form-control {
   padding: 5em 0;
   z-index: 0; }
   .testimony-section .aside-stretch {
-    background-color: #fc5e28; }
+    background-color: #CE2027; }
     .testimony-section .aside-stretch:after {
-      background-color: #fc5e28; }
+      background-color: #CE2027; }
   .testimony-section.aside-stretch-right {
     background-color: #040e26; }
     .testimony-section.aside-stretch-right:after {
@@ -9399,7 +9410,7 @@ textarea.form-control {
     bottom: 0;
     content: '';
     opacity: 0;
-    background: #fc5e28;
+    background: #CE2027;
     z-index: -2; }
   .testimony-section:after {
     position: absolute;
@@ -9502,7 +9513,7 @@ textarea.form-control {
       right: 0;
       width: 30px;
       height: 30px;
-      background: #fc5e28;
+      background: #CE2027;
       -webkit-border-radius: 50%;
       -moz-border-radius: 50%;
       -ms-border-radius: 50%;
@@ -9517,7 +9528,7 @@ textarea.form-control {
     color: #fff; }
   .testimony-wrap .position {
     font-size: 18px;
-    color: #fc5e28;
+    color: #CE2027;
     font-size: 12px;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -9570,7 +9581,7 @@ textarea.form-control {
       .ftco-counter .block-18 {
         width: 100%; } }
     .ftco-counter .block-18.bg-primary {
-      background: #fc5e28; }
+      background: #CE2027; }
       .ftco-counter .block-18.bg-primary .icon span {
         color: #fff; }
       .ftco-counter .block-18.bg-primary .text .number {
@@ -9581,7 +9592,7 @@ textarea.form-control {
     width: 70px;
     height: 100px; }
     .ftco-counter .icon span {
-      color: #fc5e28;
+      color: #CE2027;
       font-size: 50px; }
   .ftco-counter .text {
     width: calc(100% - 80px); }
@@ -9706,7 +9717,7 @@ textarea.form-control {
       .block-2 .front .box p {
         font-size: 12px; }
   .block-2 .back {
-    background: #fc5e28;
+    background: #CE2027;
     -webkit-box-shadow: 0 0 70px -10px rgba(0, 0, 0, 0.4);
     box-shadow: 0 0 70px -10px rgba(0, 0, 0, 0.4);
     -webkit-transform: rotateY(-180deg);
@@ -9788,12 +9799,12 @@ textarea.form-control {
       .blog-entry .text .heading a {
         color: #000000; }
         .blog-entry .text .heading a:hover, .blog-entry .text .heading a:focus, .blog-entry .text .heading a:active {
-          color: #fc5e28; }
+          color: #CE2027; }
   .blog-entry .meta {
     display: inline-block;
     position: absolute;
     top: -33px;
-    background: #fc5e28;
+    background: #CE2027;
     padding: 0 10px; }
     .blog-entry .meta p {
       display: inline-block;
@@ -9890,7 +9901,7 @@ textarea.form-control {
       /* Firefox 18- */
       color: rgba(0, 0, 0, 0.8) !important; }
     .contact-section .contact-form .form-control:focus, .contact-section .contact-form .form-control:active {
-      border-color: #fc5e28 !important; }
+      border-color: #CE2027 !important; }
   .contact-section .contact-form textarea.form-control {
     height: inherit !important; }
 
@@ -9907,7 +9918,7 @@ textarea.form-control {
       font-weight: 500;
       color: #000000; }
     .dbox p a {
-      color: #fc5e28; }
+      color: #CE2027; }
   .dbox .icon {
     width: 50px;
     height: 50px;
@@ -9916,7 +9927,7 @@ textarea.form-control {
     margin-bottom: 20px; }
     .dbox .icon span {
       font-size: 20px;
-      color: #fc5e28; }
+      color: #CE2027; }
   .dbox .text {
     width: calc(100% - 50px);
     padding-left: 15px; }
@@ -9949,7 +9960,7 @@ textarea.form-control {
     .block-21 .text .heading a {
       color: #000000; }
       .block-21 .text .heading a:hover, .block-21 .text .heading a:active, .block-21 .text .heading a:focus {
-        color: #fc5e28; }
+        color: #CE2027; }
   .block-21 .text .meta > div {
     display: inline-block;
     margin-right: 5px; }
@@ -9983,7 +9994,7 @@ textarea.form-control {
   margin-bottom: 7px;
   margin-right: 4px;
   border-radius: 4px;
-  color: #fc5e28;
+  color: #CE2027;
   border: 1px solid #f2f2f2;
   font-size: 11px;
   background: #f2f2f2;
@@ -10026,14 +10037,14 @@ textarea.form-control {
         font-size: 13px;
         letter-spacing: .1em;
         color: #ccc;
-        color: #fc5e28;
+        color: #CE2027;
         display: block;
         margin-bottom: 10px;
         font-weight: 500; }
       .comment-list li .comment-body .reply {
         padding: 5px 10px;
         background: #e6e6e6;
-        background: #fc5e28;
+        background: #CE2027;
         color: #fff;
         text-transform: uppercase;
         font-size: 11px;
@@ -10238,7 +10249,7 @@ textarea.form-control {
     width: 40px;
     height: 40px;
     z-index: 1;
-    color: #fc5e28;
+    color: #CE2027;
     font-size: 14px; }
   .modal-content .modal-body {
     border: none; }
