--- a/css/style.css
+++ b/css/style.css
@@ -467,6 +467,11 @@ mark,
   max-width: 100%;
   height: auto; }
 
+.img-one {
+height: 100%;
+width: 100%;
+}
+
 .img-thumbnail {
   padding: 0.25rem;
   background-color: #fff;
